src/test/ui/issues/issue-4XXXX/issue-44023.rs
pub fn main () {}

fn საჭმელად_გემრიელი_სადილი ( ) -> isize { //~ ERROR mismatched types
}
